Updated Valentine message and gallery layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- ─── Hero Section ─── -->
     <header class="hero reveal">
       <p class="hero__date">February 14</p>
-      <h1 class="hero__title">Happy Valentine's Day <span class="heart-icon">💘</span></h1>
+      <h1 class="hero__title">Happy Valentine's Day, Waleeha <span class="heart-icon">💘</span></h1>
       <div class="hero__divider" aria-hidden="true"></div>
     </header>
 
@@ -42,7 +42,7 @@
       <p class="letter__line">and every moment.</p>
       <br />
       <p class="letter__line letter__line--closing">Today is about celebrating you.</p>
-      <p class="letter__line letter__line--heart">Happy Valentine's Day ❤️</p>
+      <p class="letter__line letter__line--heart">Happy Valentine's Day, Waleeha ❤️</p>
     </section>
 
     <!-- ─── Video Section ─── -->
