--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
 </head>
 <body>
 
+  <!-- ===== Cinematic Intro Screen ===== -->
+  <div class="intro" id="introScreen" aria-hidden="true">
+    <div class="intro__content">
+      <p class="intro__text">For Someone Very Special 💌</p>
+    </div>
+  </div>
+
+  <!-- ===== Dark Mode Toggle ===== -->
+  <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle dark mode">
+    <span class="theme-toggle__icon" id="themeIcon">🌙</span>
+  </button>
+
   <!-- ===== Custom Cursor (Desktop Only) ===== -->
   <div class="cursor-dot" id="cursorDot"></div>
   <div class="cursor-ring" id="cursorRing"></div>
 
   <!-- ===== Floating Hearts (background) ===== -->
   <div id="heartsContainer" aria-hidden="true"></div>
+
+  <!-- ===== Confetti Canvas ===== -->
+  <canvas id="confettiCanvas" aria-hidden="true"></canvas>
 
   <!-- ===== Page Content ===== -->
   <div class="page" id="page">
@@ -100,8 +115,22 @@
         <div class="gallery-item reveal"><img src="images/photo9.jpeg"  alt="Memory 9"  loading="lazy" /></div>
         <div class="gallery-item reveal"><img src="images/photo10.jpeg" alt="Memory 10" loading="lazy" /></div>
         <div class="gallery-item reveal"><img src="images/photo11.jpeg" alt="Memory 11" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo12.jpeg" alt="Memory 11" loading="lazy" /></div>
+        <div class="gallery-item reveal"><img src="images/photo12.jpeg" alt="Memory 12" loading="lazy" /></div>
       </div>
+    </section>
+
+    <!-- ─── Emotional Final Section ─── -->
+    <section class="final-words reveal">
+      <p class="final-words__line">No matter what,</p>
+      <p class="final-words__line">I choose you.</p>
+      <p class="final-words__line">Today.</p>
+      <p class="final-words__line">Tomorrow.</p>
+      <p class="final-words__line final-words__line--always">Always. ❤️</p>
+    </section>
+
+    <!-- ─── Surprise Button ─── -->
+    <section class="surprise reveal">
+      <button class="surprise__btn" id="surpriseBtn" type="button">Click for a Surprise 🎁</button>
     </section>
 
     <!-- ─── Footer ─── -->
@@ -115,6 +144,14 @@
   <div class="lightbox" id="lightbox" role="dialog" aria-hidden="true">
     <button class="lightbox__close" id="lightboxClose" type="button" aria-label="Close">&times;</button>
     <img class="lightbox__img" id="lightboxImg" src="" alt="" />
+  </div>
+
+  <!-- ===== Surprise Popup ===== -->
+  <div class="surprise-popup" id="surprisePopup" aria-hidden="true">
+    <div class="surprise-popup__card" id="surpriseCard">
+      <button class="surprise-popup__close" id="surpriseClose" type="button" aria-label="Close">&times;</button>
+      <p class="surprise-popup__msg">You are my favorite person in the world 💖</p>
+    </div>
   </div>
 
   <script src="script.js"></script>
