Updated Valentine message and gallery layout

--- a/index.html
+++ b/index.html
@@ -246,44 +246,44 @@
     <section class="section gallery reveal">
       <h2 class="section__heading">Our Gallery 📸</h2>
       <div class="gallery-grid" id="galleryGrid">
-        <div class="gallery-item reveal"><img src="images/photo1.jpeg"  alt="Memory 1"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo2.jpeg"  alt="Memory 2"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo3.jpeg"  alt="Memory 3"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo4.jpeg"  alt="Memory 4"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo5.jpeg"  alt="Memory 5"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo6.jpeg"  alt="Memory 6"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo7.jpeg"  alt="Memory 7"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo8.jpeg"  alt="Memory 8"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo9.jpeg"  alt="Memory 9"  loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo10.jpeg" alt="Memory 10" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo11.jpeg" alt="Memory 11" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo12.jpeg" alt="Memory 12" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo13.jpeg" alt="Memory 13" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo14.jpeg" alt="Memory 14" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo15.jpeg" alt="Memory 15" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo16.jpeg" alt="Memory 16" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo17.jpeg" alt="Memory 17" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo18.jpeg" alt="Memory 18" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo19.jpeg" alt="Memory 19" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo20.jpeg" alt="Memory 20" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo21.jpeg" alt="Memory 21" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo22.jpeg" alt="Memory 22" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo23.jpeg" alt="Memory 23" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo24.jpeg" alt="Memory 24" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo25.jpeg" alt="Memory 25" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo26.jpeg" alt="Memory 26" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo27.jpeg" alt="Memory 27" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo28.jpeg" alt="Memory 28" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo29.jpeg" alt="Memory 29" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo30.jpeg" alt="Memory 30" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo31.jpeg" alt="Memory 31" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo32.jpeg" alt="Memory 32" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo33.jpeg" alt="Memory 33" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo34.jpeg" alt="Memory 34" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo35.jpeg" alt="Memory 35" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo36.jpeg" alt="Memory 36" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo37.jpeg" alt="Memory 37" loading="lazy" /></div>
-        <div class="gallery-item reveal"><img src="images/photo38.jpeg" alt="Memory 38" loading="lazy" /></div>
+        <div class="gallery-item"><img src="images/photo1.jpeg"  alt="Memory 1"  /></div>
+        <div class="gallery-item"><img src="images/photo2.jpeg"  alt="Memory 2"  /></div>
+        <div class="gallery-item"><img src="images/photo3.jpeg"  alt="Memory 3"  /></div>
+        <div class="gallery-item"><img src="images/photo4.jpeg"  alt="Memory 4"  /></div>
+        <div class="gallery-item"><img src="images/photo5.jpeg"  alt="Memory 5"  /></div>
+        <div class="gallery-item"><img src="images/photo6.jpeg"  alt="Memory 6"  /></div>
+        <div class="gallery-item"><img src="images/photo7.jpeg"  alt="Memory 7"  /></div>
+        <div class="gallery-item"><img src="images/photo8.jpeg"  alt="Memory 8"  /></div>
+        <div class="gallery-item"><img src="images/photo9.jpeg"  alt="Memory 9"  /></div>
+        <div class="gallery-item"><img src="images/photo10.jpeg" alt="Memory 10" /></div>
+        <div class="gallery-item"><img src="images/photo11.jpeg" alt="Memory 11" /></div>
+        <div class="gallery-item"><img src="images/photo12.jpeg" alt="Memory 12" /></div>
+        <div class="gallery-item"><img src="images/photo13.jpeg" alt="Memory 13" /></div>
+        <div class="gallery-item"><img src="images/photo14.jpeg" alt="Memory 14" /></div>
+        <div class="gallery-item"><img src="images/photo15.jpeg" alt="Memory 15" /></div>
+        <div class="gallery-item"><img src="images/photo16.jpeg" alt="Memory 16" /></div>
+        <div class="gallery-item"><img src="images/photo17.jpeg" alt="Memory 17" /></div>
+        <div class="gallery-item"><img src="images/photo18.jpeg" alt="Memory 18" /></div>
+        <div class="gallery-item"><img src="images/photo19.jpeg" alt="Memory 19" /></div>
+        <div class="gallery-item"><img src="images/photo20.jpeg" alt="Memory 20" /></div>
+        <div class="gallery-item"><img src="images/photo21.jpeg" alt="Memory 21" /></div>
+        <div class="gallery-item"><img src="images/photo22.jpeg" alt="Memory 22" /></div>
+        <div class="gallery-item"><img src="images/photo23.jpeg" alt="Memory 23" /></div>
+        <div class="gallery-item"><img src="images/photo24.jpeg" alt="Memory 24" /></div>
+        <div class="gallery-item"><img src="images/photo25.jpeg" alt="Memory 25" /></div>
+        <div class="gallery-item"><img src="images/photo26.jpeg" alt="Memory 26" /></div>
+        <div class="gallery-item"><img src="images/photo27.jpeg" alt="Memory 27" /></div>
+        <div class="gallery-item"><img src="images/photo28.jpeg" alt="Memory 28" /></div>
+        <div class="gallery-item"><img src="images/photo29.jpeg" alt="Memory 29" /></div>
+        <div class="gallery-item"><img src="images/photo30.jpeg" alt="Memory 30" /></div>
+        <div class="gallery-item"><img src="images/photo31.jpeg" alt="Memory 31" /></div>
+        <div class="gallery-item"><img src="images/photo32.jpeg" alt="Memory 32" /></div>
+        <div class="gallery-item"><img src="images/photo33.jpeg" alt="Memory 33" /></div>
+        <div class="gallery-item"><img src="images/photo34.jpeg" alt="Memory 34" /></div>
+        <div class="gallery-item"><img src="images/photo35.jpeg" alt="Memory 35" /></div>
+        <div class="gallery-item"><img src="images/photo36.jpeg" alt="Memory 36" /></div>
+        <div class="gallery-item"><img src="images/photo37.jpeg" alt="Memory 37" /></div>
+        <div class="gallery-item"><img src="images/photo38.jpeg" alt="Memory 38" /></div>
       </div>
     </section>
 
