Updated Valentine message and gallery layout

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </section>
 
     <!-- ─── Video Section ─── -->
-    <section class="section videos reveal">
-      <h2 class="section__heading">Our Moments 🎥</h2>
+    <section class="section videos">
+      <h2 class="section__heading reveal">Our Moments 🎥</h2>
       <div class="video-grid">
 
         <div class="video-card">
@@ -243,8 +243,8 @@
     </section>
 
     <!-- ─── Photo Gallery ─── -->
-    <section class="section gallery reveal">
-      <h2 class="section__heading">Our Gallery 📸</h2>
+    <section class="section gallery">
+      <h2 class="section__heading reveal">Our Gallery 📸</h2>
       <div class="gallery-grid" id="galleryGrid">
         <div class="gallery-item"><img src="images/photo1.jpeg"  alt="Memory 1"  /></div>
         <div class="gallery-item"><img src="images/photo2.jpeg"  alt="Memory 2"  /></div>
