--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy Valentine's Day 💘</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400;1,600&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -301,6 +301,16 @@
       <button class="surprise__btn" id="surpriseBtn" type="button">Click for a Surprise 🎁</button>
     </section>
 
+    <!-- ─── Secret Surprise Button ─── -->
+    <section class="secret-surprise reveal">
+      <div class="secret-surprise__glow" aria-hidden="true"></div>
+      <p class="secret-surprise__label">One more thing...</p>
+      <button class="secret-surprise__btn" id="secretSurpriseBtn" type="button">
+        <span class="secret-surprise__btn-text">Click if you love me ❤️</span>
+        <span class="secret-surprise__btn-shine" aria-hidden="true"></span>
+      </button>
+    </section>
+
     <!-- ─── Footer ─── -->
     <footer class="footer reveal">
       <p>Made with ❤️ just for you</p>
@@ -322,6 +332,20 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- ===== Secret Surprise Popup ===== -->
+  <div class="secret-popup" id="secretPopup" aria-hidden="true">
+    <div class="secret-popup__card">
+      <button class="secret-popup__close" id="secretPopupClose" type="button" aria-label="Close">&times;</button>
+      <div class="secret-popup__hearts" aria-hidden="true">💕</div>
+      <p class="secret-popup__msg">I knew it 😌❤️</p>
+      <p class="secret-popup__msg secret-popup__msg--second">I love you even more 💕</p>
+      <p class="secret-popup__sub">You can't help it, can you?</p>
+    </div>
+  </div>
+
+  <!-- ===== Secret Confetti Canvas ===== -->
+  <canvas id="secretConfettiCanvas" aria-hidden="true"></canvas>
+
+  <script src="script.js?v=2"></script>
 </body>
 </html>
